--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,31 @@
-<header class="header">HEADER</header>
+<header class="header">
+    <div class="container ">
+        <div class="header__inner">
+            <div class="header__logo">
+                <img src="@img/logo/logo-header.svg" alt="CoDo" class="header__logo-img">
+            </div>
+            <nav class="header__nav nav show">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link">Чему вы научитесь</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link">Процесс обучения</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link">Стоимость</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#!" class="nav__link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="header__phone">
+                <a href="tel:+74993489396" class="phone-number">+7 (499) 348 93 96</a>
+            </div>
+            <div class="header__burger">
+                <img src="@img/svg/burger.svg" alt="" class="header__burger-item">
+            </div>
+        </div>
+    </div>
+</header>
