--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,31 @@
 <body>
     @@include('html/header.html', {})
     <main class="main">
-        MAIN
+        <section class="intro">
+            <div class="container">
+                <div class="intro__banner">
+                    <div class="intro__banner-info">
+                        <h1 class="intro__banner-title title">
+                            Школа 
+                            <span class="intro__banner-accent">{</span>
+                            <span class="bold">программирования</span>
+                            <span class="intro__banner-accent">}</span>
+                            для тех, кому нужны реальные навыки, а не просто сертификат                            
+                        </h1>
+                        <p class="intro__banner__text">
+                            Закажите звонок, и наш специалист свяжется с вами в ближайшее время
+                        </p>
+                        <button class="button">
+                            Заказать звонок
+                        </button>
+                    </div>
+                    <div class="intro__banner-img-box">
+                        <img src="./img/intro/banners/banner-1.png" alt="Школа {программирования}для тех, кому нужны реальные навыки,
+                        а не просто сертификат" class="intro__banner-img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     @@include('html/footer.html', {})
     <script src="js/app.min.js"></script>
