--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <body>
     @@include('html/header.html', {})
     <main class="main">
+        <!-- intro -->
         <section class="intro">
             <div class="container">
                 <div class="intro__banner">
@@ -27,6 +28,86 @@
                     <div class="intro__banner-img-box">
                         <img src="./img/intro/banners/banner-1.png" alt="Школа {программирования}для тех, кому нужны реальные навыки,
                         а не просто сертификат" class="intro__banner-img">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- benefits -->
+        <section class="benefits">
+            <div class="container">
+                <h2 class="benefits__title title">
+                    Обучение в CoDe – это удобно и результативно
+                </h2>
+                <div class="benefits__cards">
+                    <div class="benefits__card">
+                        <img src="./img/benefits/practice.svg" alt="" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Огромное количество практики
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Более 500 самостоятельных заданий и 20 полноценных больших проектов
+                        </p>
+                    </div>
+                    <div class="benefits__card">
+                        <img src="./img/benefits/methods.svg" alt="Современные методики обучения" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Современные методики обучения
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Спиральное обучение: 
+                            погружаемся в материал постепенно, виток за витком                            
+                        </p>
+                    </div>
+                    <div class="benefits__card">
+                        <img src="./img/benefits/presentation.svg" alt="Простое и понятное изложение" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Простое и понятное изложение
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Вместо заумных терминов – примеры из реального мира
+
+                        </p>
+                    </div>
+                    <div class="benefits__card">
+                        <img src="./img/benefits/schedule.svg" alt="Гибкий график занятий" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Гибкий график занятий
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Учитесь в любое время в удобном 
+                            для вас темпе
+                        </p>
+                    </div>
+                    <div class="benefits__card">
+                        <img src="./img/benefits/feedback.svg" alt="Прямая связь с опытными программистами" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Прямая связь с опытными программистами
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Задавайте вопросы 
+                            и отправляйте свой код на проверку
+                        </p>
+                    </div>
+                    <div class="benefits__card">
+                        <img src="./img/benefits/payment.svg" alt="Оплата небольшими частями" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Оплата небольшими частями
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Платите только за тот материал, который сейчас изучаете, 
+                            а не за весь курс сразу
+                        </p>
+                    </div>
+                    <div class="benefits__card">
+                        <img src="./img/benefits/refund.svg" alt=" Быстрый и легкий возврат" class="benefits__card-img">
+                        <h4 class="benefits__card-title">
+                            Быстрый и легкий возврат
+                        </h4>
+                        <p class="benefits__card-desc">
+                            Если передумаете учиться –
+                            вернем деньги за 3 рабочих дня
+                        </p>
                     </div>
                 </div>
             </div>
