feat: add section info

--- a/src/index.html
+++ b/src/index.html
@@ -42,18 +42,18 @@
                 <div class="benefits__cards">
                     <div class="benefits__card">
                         <img src="./img/benefits/practice.svg" alt="" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Огромное количество практики
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Более 500 самостоятельных заданий и 20 полноценных больших проектов
                         </p>
                     </div>
                     <div class="benefits__card">
                         <img src="./img/benefits/methods.svg" alt="Современные методики обучения" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Современные методики обучения
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Спиральное обучение: 
                             погружаемся в материал постепенно, виток за витком                            
@@ -61,9 +61,9 @@
                     </div>
                     <div class="benefits__card">
                         <img src="./img/benefits/presentation.svg" alt="Простое и понятное изложение" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Простое и понятное изложение
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Вместо заумных терминов – примеры из реального мира
 
@@ -71,9 +71,9 @@
                     </div>
                     <div class="benefits__card">
                         <img src="./img/benefits/schedule.svg" alt="Гибкий график занятий" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Гибкий график занятий
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Учитесь в любое время в удобном 
                             для вас темпе
@@ -81,9 +81,9 @@
                     </div>
                     <div class="benefits__card">
                         <img src="./img/benefits/feedback.svg" alt="Прямая связь с опытными программистами" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Прямая связь с опытными программистами
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Задавайте вопросы 
                             и отправляйте свой код на проверку
@@ -91,9 +91,9 @@
                     </div>
                     <div class="benefits__card">
                         <img src="./img/benefits/payment.svg" alt="Оплата небольшими частями" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Оплата небольшими частями
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Платите только за тот материал, который сейчас изучаете, 
                             а не за весь курс сразу
@@ -101,9 +101,9 @@
                     </div>
                     <div class="benefits__card">
                         <img src="./img/benefits/refund.svg" alt=" Быстрый и легкий возврат" class="benefits__card-img">
-                        <h4 class="benefits__card-title">
+                        <h5 class="benefits__card-title">
                             Быстрый и легкий возврат
-                        </h4>
+                        </h5>
                         <p class="benefits__card-desc">
                             Если передумаете учиться –
                             вернем деньги за 3 рабочих дня
@@ -112,6 +112,49 @@
                 </div>
             </div>
         </section>
+
+        <!-- info -->
+        <section class="info">
+            <div class="container">
+                <div class="info__rows">
+                    <div class="info__row">
+                        <div class="info__item info__item--img">
+                            <img src="./img/info/support.jpg" alt="Помощь и поддержка" class="info__img">
+                        </div>
+                        <div class="info__item info__item--text-content">
+                            <h4 class="info__item-title">
+                                Помощь и поддержка
+                            </h4>
+                            <div class="info__item-desc">
+                                <p class="info__item-paragraph">
+                                    Если в процессе обучения возникнут сложности, вы всегда сможете задать вопрос своему наставнику.
+                                </p>
+                                <p class="info__item-paragraph">
+                                    Раз в несколько уроков вы будете получать большое задание, которое нужно будет сдавать на проверку код-ревьюеру. Он внимательно изучит ваш код, найдет ошибки и поможет вам стать лучше. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="info__row">
+                        <div class="info__item info__item--text-content">
+                            <h4 class="info__item-title">
+                                Методика обучения
+                            </h4>
+                            <div class="info__item-desc">
+                                <p class="info__item-paragraph">
+                                    Весь учебный материал структурирован по принципу «спирального обучения». Сначала вы получаете базовые знания, а затем на каждом витке спирали углубляетесь в изученные темы, доводя их понимание до совершенства. Такой подход упрощает обучение и гарантирует, что вы не пропустите ничего важного.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="info__item info__item--img">
+                            <img src="./img/info/teaching-method.jpg" alt="Методика обучения" class="info__img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
     @@include('html/footer.html', {})
     <script src="js/app.min.js"></script>
