feat: add gallery

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,28 @@
             </div>
         </section>
 
-        
+        <!-- gallery -->
+        <section class="gallery">
+            <div class="container">
+                <div class="gallery__inner">
+                    <div class="gallery__item gallery__item--first">
+                        <img src="./img/gallery/gallery-item-1.jpg" alt="" class="gallery__img">
+                    </div>
+                    <div class="gallery__item gallery__item--second">
+                        <img src="./img/gallery/gallery-item-2.jpg" alt="" class="gallery__img">
+                    </div>
+                    <div class="gallery__item gallery__item--third">
+                        <img src="./img/gallery/gallery-item-3.jpg" alt="" class="gallery__img">
+                    </div>
+                    <div class="gallery__item gallery__item--fourth">
+                        <img src="./img/gallery/gallery-item-4.jpg" alt="" class="gallery__img">
+                    </div>
+                    <div class="gallery__item gallery__item--fifth">
+                        <img src="./img/gallery/gallery-item-5.jpg" alt="" class="gallery__img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     @@include('html/footer.html', {})
     <script src="js/app.min.js"></script>
