feat: add footer and map container

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,82 @@
-<footer class="footer">FOOTER</footer>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__top">
+            <div class="footer__left">
+                <div class="footer__about">
+                    <div class="footer__logo">
+                        <img src="@img/logo/logo-footer.svg" alt="CoDo" class="footer__logo-img">
+                    </div>
+                    <div class="footer__text">
+                        Школа
+                        <br> 
+                        программирования
+                    </div>
+                </div>
+                <ul class="footer__socials socials">
+                    <li class="socials__item">
+                        <a href="#!" class="socials__link">
+                            <img src="@img/svg/socials/instagram.svg" alt="instagram" class="socials__img">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#!" class="socials__link">
+                            <img src="@img/svg/socials/vk.svg" alt="vk" class="socials__img">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#!" class="socials__link">
+                            <img src="@img/svg/socials/facebook.svg" alt="facebook" class="socials__img">
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#!" class="socials__link">
+                            <img src="@img/svg/socials/youtube.svg" alt="youtube" class="socials__img">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__right">
+                <nav class="footer__nav nav show nav--column">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Чему вы научитесь</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Процесс обучения</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Стоимость</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Контакты</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Регистрация</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="footer__contacts">
+                    <div class="footer__phone">
+                        <a href="tel:+79999999999" class="phone-number">+7 (999) 999 99 99</a>
+                    </div>
+                    <div class="footer__email">
+                        <a href="mailto:info@code.ru" class="email">info@code.ru</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            <div class="footer__copyright-info">
+                <p class="footer__text">© 2023 — Все права защищены</p>
+            </div>
+            <ul class="footer__copyright-list">
+                <li class="footer__copyright-item">
+                    <a href="#!" class="footer__copyright-link footer__text">Пользовательское соглашение</a>
+                </li>
+                <li class="footer__copyright-item">
+                    <a href="#!" class="footer__copyright-link footer__text">Политика конфиденциальности</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
