--- a/src/index.html
+++ b/src/index.html
@@ -159,23 +159,30 @@
             <div class="container">
                 <div class="gallery__inner">
                     <div class="gallery__item gallery__item--first">
-                        <img src="./img/gallery/gallery-item-1.jpg" alt="" class="gallery__img">
+                        <img src="./img/gallery/gallery-item-1.jpg" alt="gallery image 1" class="gallery__img">
                     </div>
                     <div class="gallery__item gallery__item--second">
-                        <img src="./img/gallery/gallery-item-2.jpg" alt="" class="gallery__img">
+                        <img src="./img/gallery/gallery-item-2.jpg" alt="gallery image 2" class="gallery__img">
                     </div>
                     <div class="gallery__item gallery__item--third">
-                        <img src="./img/gallery/gallery-item-3.jpg" alt="" class="gallery__img">
+                        <img src="./img/gallery/gallery-item-3.jpg" alt="gallery image 3" class="gallery__img">
                     </div>
                     <div class="gallery__item gallery__item--fourth">
-                        <img src="./img/gallery/gallery-item-4.jpg" alt="" class="gallery__img">
+                        <img src="./img/gallery/gallery-item-4.jpg" alt="gallery image 4" class="gallery__img">
                     </div>
                     <div class="gallery__item gallery__item--fifth">
-                        <img src="./img/gallery/gallery-item-5.jpg" alt="" class="gallery__img">
+                        <img src="./img/gallery/gallery-item-5.jpg" alt="gallery image 5" class="gallery__img">
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- map -->
+        <div class="map">
+            <div class="container">
+                <div class="map__inner"></div>
+            </div>
+        </div>
     </main>
     @@include('html/footer.html', {})
     <script src="js/app.min.js"></script>
