feat: add yandex map

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,25 +1,27 @@
 <header class="header">
     <div class="container ">
         <div class="header__inner">
-            <div class="header__logo">
-                <img src="@img/logo/logo-header.svg" alt="CoDo" class="header__logo-img">
+            <div class="header__left">
+                <div class="header__logo">
+                    <img src="@img/logo/logo-header.svg" alt="CoDo" class="header__logo-img">
+                </div>
+                <nav class="header__nav nav show">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Чему вы научитесь</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Процесс обучения</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Стоимость</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#!" class="nav__link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="header__nav nav show">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link">Чему вы научитесь</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link">Процесс обучения</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link">Стоимость</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#!" class="nav__link">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
             <div class="header__phone">
                 <a href="tel:+74993489396" class="phone-number">+7 (499) 348 93 96</a>
             </div>
