--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,7 @@
                 <div class="intro__banner">
                     <div class="intro__banner-info">
                         <h1 class="intro__banner-title title">
-                            Школа 
-                            <span class="intro__banner-accent">{</span>
-                            <span class="bold">программирования</span>
-                            <span class="intro__banner-accent">}</span>
-                            для тех, кому нужны реальные навыки, а не просто сертификат                            
+                            Школа <span class="intro__banner-accent">{</span><span class="bold">программирования</span><span class="intro__banner-accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
                         </h1>
                         <p class="intro__banner__text">
                             Закажите звонок, и наш специалист свяжется с вами в ближайшее время
@@ -180,7 +176,7 @@
         <!-- map -->
         <div class="map">
             <div class="container">
-                <div class="map__inner"></div>
+                <div class="map__inner" id="map"></div>
             </div>
         </div>
     </main>
