--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
                 <div class="intro__banner">
                     <div class="intro__banner-info">
                         <h1 class="intro__banner-title title">
-                            Школа <span class="intro__banner-accent">{</span><span class="bold">программирования</span><span class="intro__banner-accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
+                            Школа <span class="accent">{</span><span class="bold">программирования</span><span class="accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
                         </h1>
                         <p class="intro__banner__text">
                             Закажите звонок, и наш специалист свяжется с вами в ближайшее время
                         </p>
-                        <button class="button">
+                        <button class="button" type="button" data-modal="form-modal">
                             Заказать звонок
                         </button>
                     </div>
@@ -177,6 +177,39 @@
         <div class="map">
             <div class="container">
                 <div class="map__inner" id="map"></div>
+            </div>
+        </div>
+
+        <!-- feedback form -->
+        <div class="modal " id="form-modal"> 
+            <div class="container">
+                <div class="modal__content">
+                    <h3 class="modal__title title">Заказать звонок</h3>
+                    <form action="/" class="modal__form form">
+                        <div class="form__field">
+                            <label for="name" class="form__label">Имя</label>
+                            <input type="text" id="name" class="form__input" placeholder="Ваше имя">
+                        </div>
+                        <div class="form__field">
+                            <label for="tel" class="form__label">Телефон</label>
+                            <input type="tel" id="tel" class="form__input" placeholder="+7 ХХХ - ХХХ - ХХ - ХХ">
+                        </div>
+                        <div class="form__field">
+                            <label for="email" class="form__label">Имя</label>
+                            <input type="email" id="email" class="form__input" placeholder="mail@site.com">
+                        </div>
+                        <div class="form__field">
+                            <label for="message" class="form__label">Сообщение</label>
+                            <textarea id="message" class="form__input form__input--textarea" placeholder="Ваше сообщение"></textarea>
+                        </div>
+                        <div class="form__text">
+                            Нажимая кнопку "Отправить", соглашаюсь с <span class="accent">политикой конфиденциальности</span>
+                        </div>
+                        <button class="form__button button" type="submit">
+                            Заказать звонок
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
