feat: add mobile menu

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="footer__right">
-                <nav class="footer__nav nav show nav--column">
+                <nav class="footer__nav nav nav--column">
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#!" class="nav__link">Чему вы научитесь</a>
