--- a/src/html/header.html
+++ b/src/html/header.html
@@ -5,7 +5,7 @@
                 <div class="header__logo">
                     <img src="@img/logo/logo-header.svg" alt="CoDo" class="header__logo-img">
                 </div>
-                <nav class="header__nav nav show">
+                <nav class="header__nav nav" id="header-nav">
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#!" class="nav__link">Чему вы научитесь</a>
@@ -19,14 +19,20 @@
                         <li class="nav__item">
                             <a href="#!" class="nav__link">Контакты</a>
                         </li>
+                        <li class="nav__item nav__item--hidden">
+                            <a href="#!" class="nav__link">Регистрация</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
             <div class="header__phone">
                 <a href="tel:+74993489396" class="phone-number">+7 (499) 348 93 96</a>
             </div>
-            <div class="header__burger">
-                <img src="@img/svg/burger.svg" alt="" class="header__burger-item">
+            <div class="header__burger" id="burger-menu">
+                <img src="@img/svg/burger.svg" alt="">
+            </div>
+            <div class="header__close" id="close-menu">
+                <img src="@img/svg/close.svg" alt="">
             </div>
         </div>
     </div>
