feat: add slick slider for banners

--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,55 @@
         <!-- intro -->
         <section class="intro">
             <div class="container">
-                <div class="intro__banner">
-                    <div class="intro__banner-info">
-                        <h1 class="intro__banner-title title">
-                            Школа <span class="accent">{</span><span class="bold">программирования</span><span class="accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
-                        </h1>
-                        <p class="intro__banner__text">
-                            Закажите звонок, и наш специалист свяжется с вами в ближайшее время
-                        </p>
-                        <button class="button" type="button" data-modal="form-modal">
-                            Заказать звонок
-                        </button>
+                <div class="intro__slider">
+                    <div class="intro__banner">
+                        <div class="intro__banner-info">
+                            <h1 class="intro__banner-title title">
+                                Школа <span class="accent">{</span><span class="bold">программирования</span><span class="accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
+                            </h1>
+                            <p class="intro__banner__text">
+                                Закажите звонок, и наш специалист свяжется с вами в ближайшее время
+                            </p>
+                            <button class="button" type="button" data-modal="form-modal">
+                                Заказать звонок
+                            </button>
+                        </div>
+                        <div class="intro__banner-img-box">
+                            <img src="./img/intro/banners/banner-1.png" alt="Школа {программирования}для тех, кому нужны реальные навыки,
+                            а не просто сертификат" class="intro__banner-img">
+                        </div>
                     </div>
-                    <div class="intro__banner-img-box">
-                        <img src="./img/intro/banners/banner-1.png" alt="Школа {программирования}для тех, кому нужны реальные навыки,
-                        а не просто сертификат" class="intro__banner-img">
+                    <div class="intro__banner">
+                        <div class="intro__banner-info">
+                            <h1 class="intro__banner-title title">
+                                Обучение <br> через практику                           
+                            </h1>
+                            <p class="intro__banner__text">
+                                Всё, что вы узнали, вы тут же начинаете применять на практике. Вы сразу видите результаты своего труда.
+                            </p>
+                            <button class="button" type="button" data-modal="form-modal">
+                                Заказать звонок
+                            </button>
+                        </div>
+                        <div class="intro__banner-img-box">
+                            <img src="./img/intro/banners/banner-2.png" alt="Обучение через практику" class="intro__banner-img">
+                        </div>
+                    </div>
+                    <div class="intro__banner">
+                        <div class="intro__banner-info">
+                            <h1 class="intro__banner-title title">
+                                Весь материал разбит на небольшие уроки                
+                            </h1>
+                            <p class="intro__banner__text">
+                                Теория и практика подаются маленькими порциями. Так вам будет легче усваивать новые знания.
+                            </p>
+                            <button class="button" type="button" data-modal="form-modal">
+                                Заказать звонок
+                            </button>
+                        </div>
+                        <div class="intro__banner-img-box">
+                            <img src="./img/intro/banners/banner-3.png" alt="Весь материал разбит на небольшие уроки" class="intro__banner-img">
+                        </div>
                     </div>
                 </div>
             </div>
