--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="google" content="notranslate">
     <meta name="format-detection" content="telephone=no">
     <meta name="description" content="">
-    <link rel="stylesheet" href="css/style.min.css?_v=20240324194902">
+    <link rel="stylesheet" href="css/style.min.css?_v=20240324195557">
     <title>CoDe - школа программирования</title>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<3b140827-3adf-40f1-a8e6-f42dc13f8f39&_v=20240324194902>" type="text/javascript"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js?_v=20240324194902" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js?_v=20240324194902"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js?_v=20240324194902"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css?_v=20240324194902"/>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<3b140827-3adf-40f1-a8e6-f42dc13f8f39&_v=20240324195557>" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js?_v=20240324195557" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js?_v=20240324195557"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js?_v=20240324195557"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css?_v=20240324195557"/>
 </head>
 <body>
     <header class="header">
@@ -61,7 +61,7 @@
         <section class="intro">
             <div class="container">
                 <div class="intro__slider">
-                    <div class="intro__banner">
+                    <div class="intro__banner" style="background-size: cover;">
                         <div class="intro__banner-info">
                             <h1 class="intro__banner-title title">
                                 Школа <span class="accent">{</span><span class="bold">программирования</span><span class="accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
@@ -78,7 +78,7 @@
                             а не просто сертификат" class="intro__banner-img">
                         </div>
                     </div>
-                    <div class="intro__banner">
+                    <div class="intro__banner" style="background-size: cover;">
                         <div class="intro__banner-info">
                             <h1 class="intro__banner-title title">
                                 Обучение <br> через практику                           
@@ -94,7 +94,7 @@
                             <picture><source srcset="./img/intro/banners/banner-2.webp" type="image/webp"><img src="./img/intro/banners/banner-2.png" alt="Обучение через практику" class="intro__banner-img"></picture>
                         </div>
                     </div>
-                    <div class="intro__banner">
+                    <div class="intro__banner" style="background-size: cover;">
                         <div class="intro__banner-info">
                             <h1 class="intro__banner-title title">
                                 Весь материал разбит на небольшие уроки                
@@ -384,7 +384,7 @@
         </div>
     </div>
 </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js?_v=20240324194902"></script>
-    <script src="js/app.min.js?_v=20240324194902"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js?_v=20240324195557"></script>
+    <script src="js/app.min.js?_v=20240324195557"></script>
 </body>
 </html>
