fix: intro bg size

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <section class="intro">
             <div class="container">
                 <div class="intro__slider">
-                    <div class="intro__banner">
+                    <div class="intro__banner" style="background-size: cover;">
                         <div class="intro__banner-info">
                             <h1 class="intro__banner-title title">
                                 Школа <span class="accent">{</span><span class="bold">программирования</span><span class="accent">}</span> для тех, кому нужны реальные навыки, а не просто сертификат                            
@@ -27,7 +27,7 @@
                             а не просто сертификат" class="intro__banner-img">
                         </div>
                     </div>
-                    <div class="intro__banner">
+                    <div class="intro__banner" style="background-size: cover;">
                         <div class="intro__banner-info">
                             <h1 class="intro__banner-title title">
                                 Обучение <br> через практику                           
@@ -43,7 +43,7 @@
                             <img src="./img/intro/banners/banner-2.png" alt="Обучение через практику" class="intro__banner-img">
                         </div>
                     </div>
-                    <div class="intro__banner">
+                    <div class="intro__banner" style="background-size: cover;">
                         <div class="intro__banner-info">
                             <h1 class="intro__banner-title title">
                                 Весь материал разбит на небольшие уроки                
